ingress/controller.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: userapi-service
  namespace: ingress-nginx
  labels:
    app: userapi
spec:
  type: LoadBalancer
  selector:
    app: userapi
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 8080
