ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-ingress
  namespace: kube-system
  labels:
    app.kubernetes.io/name: headlamp-ingress
spec:
  rules:
  - host: home.local/headlamp
    http:
      paths:
      - pathType: Prefix
        path: "/headlamp"
        backend:
          service:
            name: headlamp-service
            port:
              number: 80
